# blogpost-purgatory

./: cabal.project
docs/: index.html
docs/c2hs-manual/: README.md  bugs.html  copyright.html  gfdl.html  implementing.html  index.html  release-notes.html  usage.html
haskell-wrapper/: haskell-wrapper.cabal
haskell-wrapper/cbits/: rust-wrapper.h
haskell-wrapper/demo/: Main.hs
haskell-wrapper/src/: Certificate.hs  Handle.hs
haskell-wrapper/src/C/: Certificate.chs  GettingStarted.chs  Handle.chs
haskell-wrapper/src/C/Color/: Foreign.chs  Native.chs
haskell-wrapper/src/Color/: Foreign.hs
rust-wrapper/: Cargo.toml  rust-wrapper.pc
rust-wrapper/src/: lib.rs
