[package]
name = "rust-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh          = "0.10"
der            = "0.7"
elliptic-curve = { version = "0.13", features = ["pem"] }
p256           = "0.13"
pkcs8          = { version = "0.10", features = ["std"] }
rand           = "0.8"
rcgen          = "0.10"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
x509-cert      = "0.2"

haskell-ffi.git = "https://github.com/BeFunctional/haskell-rust-ffi.git"
haskell-ffi.rev = "2bf292e2e56eac8e9fb0fb2e1450cf4a4bd01274"

[features]
capi = []

[package.metadata.capi.library]
versioning = false
